# doc-rag

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: app.py
migrations/: env.py
src/app/: config.py  db.py  exception_handlers.py  exceptions.py  main.py  middleware.py
src/app/migrations/: env.py
src/app/migrations/versions/: 60ffda06b9c9_add_is_embedded_to_chunks.py  946984c9442b_update_embedding_dimension_768.py  bcfe046193cc_initial_tables.py
src/app/models/: __init__.py  answer.py  base.py  chunk.py  document.py  question.py  summary.py
src/app/repositories/: __init__.py  answer.py  chunk.py  document.py  question.py  summary.py
src/app/routers/: __init__.py  documents.py
src/app/schemas/: __init__.py  answer.py  common.py  document.py  question.py  retrieval.py  summary.py
src/app/services/: __init__.py  answer_evaluation.py  chunking.py  embedding.py  llm.py  pdf_extractor.py  processing.py  question_generation.py  retrieval.py  storage.py  summarization.py
tests/: test_answer_evaluation.py  test_api.py  test_chunking.py  test_documents.py  test_e2e.py  test_embedding.py  test_embedding_integration.py  test_llm.py  test_pdf_extractor.py  test_processing.py  test_qna_generation.py  test_retrieval.py  test_summarization.py
